[package]
name = "neato_driver"
version = "0.1.0"
authors = ["Loy van Beek <loy.vanbeek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
serialport = { version = "3.3.0", optional = false }  # udev is causing issues with CI and happens to be optional
